# osoyoo_omni_drive

./: CMakeLists.txt  README.md  package.xml
config/: oyku.rviz
firmware/examples/4_encoder_direction/: 4_encoder_direction.ino
firmware/examples/4_motor_speed_control/: 4_motor_speed_control.ino
firmware/examples/cmd_vel/: cmd_vel.ino
firmware/examples/encoder_connections_test/: encoder_connections_test.ino
firmware/examples/encoder_direction/: encoder_direction.ino
firmware/examples/motor_speed_control/: motor_speed_control.ino
firmware/examples/motor_speed_control_with_library/: motor_speed_control_with_library.ino
firmware/examples/move_4_motor_raw/: move_4_motor_raw.ino
firmware/examples/move_motor_with_library/: move_motor_with_library.ino
firmware/examples/move_motors_with_library/: move_motors_with_library.ino
firmware/examples/pulses_per_revolution/: pulses_per_revolution.ino
firmware/examples/read_encoder/: read_encoder.ino
firmware/examples/tune_pid_gains/: tune_pid_gains.ino
firmware/libraries/EncoderHandler/: encoder_handler.cpp  encoder_handler.h
firmware/libraries/MotorSpeedControl/: motor_speed_control.cpp  motor_speed_control.h
firmware/libraries/SparkFun_TB6612/src/: SparkFun_TB6612.cpp  SparkFun_TB6612.h
launch/: base_driver.launch
